# vult

./: .clang-format  .gitignore  .merlin  .ocamlformat  .ocamlinit  .ocp-indent  .travis-ocaml.sh  .travis-vult.sh  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  _oasis  _tags  _tags.bak  appveyor-vult.sh  appveyor.yml  build.sh  checkerVult.ml  config.toml  debugger.ml  demo.html  driver.ml  dune  dune-project  dynInterpreter.ml  either.ml  errors.ml  gates.lua  indentall.sh  index.html  index.xml  interpreterVult.ml  lexer.mll  lexerVult.mll  myocamlbuild.ml  opam  out.txt  (+25 more)
blog/: index.html  index.xml
categories/: index.xml
content/: blog.md  comments.md  demo-small.md  demo.md  overview.md  tutorials.md
css/: vult.css
demo/: index.html
examples/: CMakeLists.txt  README.md  adsr.vult  blit.vult  filters.vult  monoin.vult  moog_filter.vult  sin.vult  state_variable.vult  voice.vult
javascripts/: audio.js  demo.js  main.js  midi.js  vult.js  vult_node.js  vultweb.js
node/: app.js  package.json
overview/: index.html
runtime/: vultin.c  vultin.cpp  vultin.h
scripts/: .gitignore  build.sh  build_examples.sh  build_node.sh  debugscript.base  debugscript.sh  doc.sh  indentall.sh  makezip.sh  runtests.sh  runtop.sh
shared/: CMakeLists.txt  exports.c  exports.h  flexdll_stub.c  vtest.c
src/: META  checker.ml  checkerVult.ml  cli.ml  debugger.ml  driver.ml  dune  dynInterpreter.ml  either.ml  env.ml  errorsVult.ml  lexerVult.mll  loader.ml  parserVult.ml  passes.ml  printBuffer.ml  printTypes.ml  protoGenC.ml  protoGenJS.ml  scope.ml  scope.mli  test.ml  types.ml  typesUtil.ml  typesVult.ml  unionFind.ml  version.ml  vult.ml  vult.mllib  vult_main.ml  vult_node.ml  vultc.ml  (+1 more)
src-transition/: version.ml  vultc.ml
test/: baseTok.mll  blit.vult  bug.vlt  diff.ml  dsp1.vlt  dsp1.vult  dune  fact.vlt  fact.vult  fivultnacci.vlt  fivultnacci.vult  ifstatements.vlt  ifstatements.vult  inline.vult  moog_filter.vlt  moog_filter.vult  perf.ml  randProg.ml  simpleStatements.vlt  simpleStatements.vult  tcommon.ml  test.ml  top.ml  types.vlt  voice.vult
test/bench/: .gitignore  bench.vult  main.cpp  main.js  main.lua
test/code/: Constants.cpp.float.base  Constants.h.fixed.base  Constants.lua.base  DataTypes.cpp.fixed.base  DataTypes.h.fixed.base  DataTypes.h.float.base  DataTypes.lua.base  FixedAndFloat.cpp.fixed.base  FixedAndFloat.cpp.float.base  FixedAndFloat.h.fixed.base  FixedAndFloat.h.float.base  FixedAndFloat.lua.base  GenericArrays.cpp.float.base  GenericArrays.h.fixed.base  GenericArrays.h.float.base  GenericArrays.lua.base  InstanceArray.cpp.fixed.base  InstanceArray.cpp.float.base  InstanceArray.h.fixed.base  InstanceArray.h.float.base  InstanceArray.lua.base  IterLoop.cpp.fixed.base  IterLoop.cpp.float.base  IterLoop.h.float.base  IterLoop.lua.base  Match.cpp.float.base  Match.h.fixed.base  Match.h.float.base  Match.lua.base  SaveState.cpp.fixed.base  SaveState.cpp.float.base  SaveState.h.fixed.base  SaveState.h.float.base  SaveState.lua.base  StringType.cpp.float.base  StringType.h.fixed.base  StringType.h.float.base  StringType.lua.base  Tables.cpp.fixed.base  Tables.h.fixed.base  (+554 more)
test/compile/: array_defined_type.vult  array_dimension.vult  array_instance.vult  array_no_const.vult  array_return.vult  constant_interpreter.vult  defined_types.vult  multi_iter.vult  multi_return.vult  record_init.vult
test/errors/: error1.base  error1.vult  error10.base  error10.vult  error11.base  error11.vult  error12.base  error12.vult  error13.base  error13.vult  error14.base  error14.vult  error15.base  error15.vult  error16.base  error16.vult  error17.base  error17.vult  error17_b.vult  error18.base  error18.vult  error19.base  error19.vult  error2.base  error2.vult  error20.base  error20.vult  error21.base  error21.vult  error22.base  error22.vult  error23.base  error23.vult  error24.base  error24.vult  error25.base  error25.vult  error26.base  error26.vult  error27.base  (+50 more)
test/other/: log.vult
test/parser/: array_syntax.base  array_syntax.vult  exp_array.base  exp_array.vult  exp_basic.base  exp_basic.vult  exp_misc.base  exp_misc.vult  exp_precedence.base  exp_precedence.vult  exp_tuples.base  exp_tuples.vult  match.vult  mem_tag.base  mem_tag.vult  member_access.base  member_access.vult  new_type_spec.base  new_type_spec.vult  stmt_call.base  stmt_call.vult  stmt_external.base  stmt_external.vult  stmt_functions.base  stmt_functions.vult  stmt_misc.base  stmt_misc.vult  stmt_types.base  stmt_types.vult  stmt_val_mem.base  stmt_val_mem.vult  template_tags.base  template_tags.vult  types_basic.base  types_basic.vult  unbound.base  unbound.vult
test/passes/: context_nested.base  context_nested.vult  context_simple.base  context_simple.vult  external_calls.base  external_calls.vult  if_to_stmt.base  if_to_stmt.vult  nested_if.base  nested_if.vult  output_references.base  output_references.vult  simplify.base  simplify.vult  split_mem.base  split_mem.vult  tuple_assign.base  tuple_assign.vult  tuple_to_types.base  tuple_to_types.vult  wav_file.vult
test/perf/: audio.vult  bitcrush_perf.vult  blit_perf.vult  clipper_perf.vult  ladder_euler_perf.vult  ladder_heun_perf.vult  minblep_perf.vult  noise_perf.vult  phd_perf.vult  ramp.vult  rescomb_perf.vult  saturate_perf.vult  saturate_soft_perf.vult  saw_blit_perf.vult  saw_eptr_perf.vult  saw_ptr1_perf.vult  saw_ptr2_perf.vult  saw_r_perf.vult  sawcore_perf.vult  short_delay_perf.vult  sine_perf.vult  svf_perf.vult  tricore_perf.vult
test/templates/: af_f.vult  aff_f.vult  aff_ff.vult  afi_fi.vult  sf_f.vult  sff_f.vult  sff_ff.vult  sfi_fi.vult
(+348 files in other folders)
