
opam-version: "2.0"
version: "1.0"
maintainer: "leonardo@vult-dsp.com"
authors: ["Leonardo Laguna Ruiz"]
homepage: "https://modlfo.github.com/vult"
bug-reports: "https://github.com/modlfo/vult"
dev-repo: "git+https://github.com/modlfo/vult.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]