(ocamllex baseTok)

(executable
 (name test)
 (modules Test Tcommon Diff BaseTok RandProg)
 (libraries core util driver pparser oUnit str pla)
 (preprocess
  (pps pla.ppx))
 (ocamlopt_flags -O3 -unbox-closures)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name perf)
 (modules Perf)
 (libraries core util driver pparser oUnit str pla)
 (preprocess
  (pps pla.ppx))
 (ocamlopt_flags -O3 -unbox-closures)
 (instrumentation
  (backend bisect_ppx)))
